[project]
name = "api-integration-openai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MianAnwar", email = "miananwar.developer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.15",
]

[project.scripts]
api-integration-openai-agents = "api_integration_openai_agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
